--- a/templates/home.html
+++ b/templates/home.html
@@ -1,1 +1,8 @@
-<p>HI it work</p>
+{% extends '_base.html' %}
+
+{% block content %}
+    {% for post in object_list %}
+        <h2>{{post.title}}</h2>
+        <p>{{post.text}}</p>
+    {% endfor %}
+{% endblock content %}
