--- a/templates/home.html
+++ b/templates/home.html
@@ -2,7 +2,7 @@
 
 {% block content %}
     {% for post in object_list %}
-        <h2>{{post.title}}</h2>
+        <h2><a href="{% url 'detail' post.pk %}">{{post.title}}</a></h2>
         <p>{{post.text}}</p>
     {% endfor %}
 {% endblock content %}
